--- a/pubsub/package.json
+++ b/pubsub/package.json
@@ -1,17 +1,18 @@
 {
   "name": "gcf-gmail-codelab-pubsub",
   "version": "1.0.0",
-  "description": "",
+  "description": "Code for the Empower Your Gmail Inbox with Google Cloud Functions codelab.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/googlecodelabs/gcf-gmail-codelab"
   },
-  "author": "",
+  "author": "Google Cloud",
   "license": "Apache-2.0",
   "dependencies": {
-    "@google-cloud/datastore": "^3.1.2",
-    "@google-cloud/storage": "^2.4.2",
+    "@google-cloud/express-oauth2-handlers": "^0.1.2",
+    "@google-cloud/vision": "^0.25.0",
+    "express": "^4.16.4",
     "googleapis": "^37.2.0"
   }
 }
